--- a/Sprint 2/moto_rental/src/main/webapp/styles/styles_home/styles.css
+++ b/Sprint 2/moto_rental/src/main/webapp/styles/styles_home/styles.css
@@ -1,8 +1,8 @@
 .carousel-inner img {
-    width: 150%;
-    max-height: 460px;
+    width: 100%;
+    max-height: 460%;
 }
 
 .carousel-inner{
- height: 500px;
+ height: 750px;
 }
